Safari CTA alignment fix

--- a/styles.css
+++ b/styles.css
@@ -372,10 +372,17 @@ li {
 
 /* CTA sticky*/
 .cta-sticky {
-  position: -webkit-sticky;
-  position: sticky;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+        justify-content: space-evenly;
+  -webkit-box-align: center;
+    -ms-flex-align: center;
+        align-items: center;
   bottom: 0;
-
+  height: 80px;
   width: 100%;
   padding: 15px;
 }
